enable/disable buttons

--- a/activity1/main.html
+++ b/activity1/main.html
@@ -10,14 +10,14 @@
 	<br>
 	<div id="response">
 		<p>
-			<input type='text' id="input" placeholder="number" name='number' />
+			<input type='text' id="input" placeholder="number" name='number' onkeypress="enable()" />
 			<br><br>
-			<input type='button' id="btn_add" value='add' onclick="postAdd()" />
-			<input type='button' id="btn_sub" value='subtract' onclick="postSub()" />
+			<input type='button' id="btn_add" value='add' onclick="postAdd()" disabled />
+			<input type='button' id="btn_sub" value='subtract' onclick="postSub()" disabled />
 			<input type='button' id="btn_pop" value='pop' onclick="postPop()" />
 		</p>
 	</div>
-	<input type='button' id="btn_reset" value='reset' onclick="reset()"/></a>
+	<input type='button' id="btn_reset" value='reset' onclick="reset()" /></a>
 	<br><br>
 
 	<div id="past">
@@ -27,6 +27,7 @@
 	</div>
 </body>
 <script>
+	//load calc stack 
 	function load() {
 		let val = document.getElementById('input');
 		let req = new XMLHttpRequest();
@@ -35,7 +36,7 @@
 			if (req.readyState === 4) {
 				if (req.status === 200) {
 					var resp = JSON.parse(req.responseText);
-					
+
 					var past = document.getElementById("past");
 					past.innerHTML = printStack(resp);
 				}
@@ -43,11 +44,12 @@
 		};
 		req.setRequestHeader("Content-type", "application/json");
 		req.send('{ \"value\" : \"' + 0 + '\"}');
-		loadValue();
+		loadValue();	//load initial value
 	}
 </script>
 
 <script>
+	//load value
 	function loadValue() {
 		let val = document.getElementById('input');
 		let req = new XMLHttpRequest();
@@ -87,6 +89,7 @@
 		req.setRequestHeader("Content-type", "application/json");
 		val.innerHTML = add;
 		req.send('{ \"value\" : \"' + add + '\"}');
+		clearButtons();
 	}
 </script>
 
@@ -111,6 +114,7 @@
 		req.setRequestHeader("Content-type", "application/json");
 		val.innerHTML = sub;
 		req.send('{ \"value\" : \"' + sub + '\"}');
+		clearButtons();
 	}
 </script>
 
@@ -132,6 +136,7 @@
 		};
 		req.setRequestHeader("Content-type", "application/json");
 		req.send('{ \"value\" : \"' + 0 + '\"}');
+		clearButtons();
 	}
 </script>
 
@@ -153,6 +158,7 @@
 		};
 		req.setRequestHeader("Content-type", "application/json");
 		req.send('{ \"value\" : \"' + 0 + '\"}');
+		clearButtons();
 	}
 </script>
 
@@ -161,9 +167,32 @@
 		var str = '';
 		for (var i = 0; i < response.calcStack.length; i++) {
 			str += response.calcStack[i].operation + ", " + response.calcStack[i].operand + ", " +
-			response.calcStack[i].ip + " " + response.calcStack[i].user + "<br>";
+				response.calcStack[i].ip + " " + response.calcStack[i].user + "<br>";
 		}
 		return str;
+	}
+</script>
+
+<script>
+	function enable() {
+
+		var value = document.getElementById("input").value;
+
+		var parse = parseInt(value);
+		if (!isNaN(parse)) {
+			var btn1 = document.getElementById("btn_add").disabled = false;
+			var btn2 = document.getElementById("btn_sub").disabled = false;
+		}
+
+	}
+</script>
+
+<script>
+	function clearButtons() {
+		//reset values of buttons for future input
+			var value = document.getElementById("input").value = "";
+			var btn1 = document.getElementById("btn_add").disabled = true;
+			var btn2 = document.getElementById("btn_sub").disabled = true;
 	}
 </script>
 
